# My-Social-Media-APP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  app.rc
peer-server/: package.json  server.js
src/: AppWindow.cpp  AppWindow.h  main.cpp
ui-src/: astro.config.mjs  index.html  package-lock.json  package.json  vite.config.js
ui-src/src/: index.css
ui-src/src/components/: App.jsx  CallModal.jsx  CallPanel.jsx  ChatArea.jsx  ChatLayout.jsx  Login.jsx  Sidebar.jsx  Toast.jsx
ui-src/src/layouts/: Layout.astro
ui-src/src/lib/: crypto.js  store.js  webrtc.js
ui-src/src/pages/: index.astro
ui-src/src/styles/: global.css
